Session3/yaml/review-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-deployment
  labels:
    app: review
spec:
  replicas: 3
  selector:
    matchLabels:
      app: review
  template:
    metadata:
      labels:
        app: review
    spec:
      containers:
        - name: review-app
          image: chamilaliyanage/echo-env-http:1.1
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: review-service
spec:
  selector:
    app: review
  ports:
    - port: 80
      targetPort: 8080
