Session3/yaml/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: shopping-app-ingress
spec:
  rules:
  - http:
      paths:
        - path: /review
          backend:
            serviceName: review-service-lb
            servicePort: 80
        - path: /product
          backend:
            serviceName: product-service-lb
            servicePort: 80
